envoy/config/envoy-config.json
{
  "admin": {
    "access_log_path": "/dev/null",
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9001
      }
    }
  },
  "static_resources": {
    "listeners": [
        {
            "address": {
              "socket_address": {
                "address": "0.0.0.0",
                "port_value": 8754
              }
            },
            "filter_chains": [
              {
                "filters": [
                  {
                    "name": "envoy.filters.network.tcp_proxy",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                      "stat_prefix": "tcp",
                      "cluster": "user_security_db_envoy"
                    }
                  }
                ]
              }
            ]
          },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 443
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "codec_type": "AUTO",
                  "stat_prefix": "front_envoy_listener",
                  "route_config": {
                    "name": "front_envoy_listener",
                    "virtual_hosts": [
                      {
                        "name": "user_security_service_envoy",
                        "domains": ["api.heezy.dev"],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/user_security_service/"
                            },
                            "route": {
                              "cluster": "user_security_service_envoy",
                              "prefix_rewrite": "/"
                            }
                          }
                        ]
                      },
                      {
                        "name": "web_frontend_service_envoy",
                        "domains": ["*"],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "web_frontend_service_envoy"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {}
                    }
                  ]
                }
              }
            ],
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "common_tls_context": {
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "filename": "/etc/tls-secret/tls.crt"
                      },
                      "private_key": {
                        "filename": "/etc/tls-secret/tls.key"
                      }
                    }
                  ]
                }
              }
            }
          }
        ]
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8786
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "codec_type": "AUTO",
                  "stat_prefix": "user_security_service_envoy_listener",
                  "route_config": {
                    "name": "user_security_service_envoy_listener",
                    "virtual_hosts": [
                      {
                        "name": "user_security_service",
                        "domains": ["*"],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "user_security_service"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {}
                    }
                  ]
                }
              }
            ]
          }
        ]
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8787
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "stat_prefix": "tcp",
                  "cluster": "user_security_db"
                }
              }
            ]
          }
        ]
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8790
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "codec_type": "AUTO",
                  "stat_prefix": "web_frontend_service_envoy_listener",
                  "route_config": {
                    "name": "web_frontend_service_envoy_listener",
                    "virtual_hosts": [
                      {
                        "name": "web_frontend_service",
                        "domains": ["*"],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "web_frontend_service"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {}
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "eds_cluster",
        "connect_timeout": "0.25s",
        "type": "strict_dns",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "eds_cluster",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "host.minikube.internal",
                        "port_value": 8080
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "front_envoy",
        "connect_timeout": "0.25s",
        "type": "EDS",
        "lb_policy": "ROUND_ROBIN",
        "eds_cluster_config": {
          "service_name": "front_envoy",
          "eds_config": {
            "resource_api_version": "V3",
            "api_config_source": {
              "api_type": "REST",
              "transport_api_version": "V3",
              "cluster_names": ["eds_cluster"],
              "refresh_delay": "20s"
            }
          }
        }
      },
      {
        "name": "user_security_service_envoy",
        "connect_timeout": "0.25s",
        "type": "EDS",
        "lb_policy": "ROUND_ROBIN",
        "eds_cluster_config": {
          "service_name": "user_security_service_envoy",
          "eds_config": {
            "resource_api_version": "V3",
            "api_config_source": {
              "api_type": "REST",
              "transport_api_version": "V3",
              "cluster_names": ["eds_cluster"],
              "refresh_delay": "20s"
            }
          }
        }
      },
      {
        "name": "user_security_service",
        "connect_timeout": "0.25s",
        "type": "static",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "user_security_service",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8080
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "user_security_db_envoy",
        "connect_timeout": "0.25s",
        "type": "EDS",
        "lb_policy": "ROUND_ROBIN",
        "eds_cluster_config": {
          "service_name": "user_security_db_envoy",
          "eds_config": {
            "resource_api_version": "V3",
            "api_config_source": {
              "api_type": "REST",
              "transport_api_version": "V3",
              "cluster_names": ["eds_cluster"],
              "refresh_delay": "20s"
            }
          }
        }
      },
      {
        "name": "user_security_db",
        "connect_timeout": "5s",
        "type": "static",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "user_security_db",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 5432
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "basic_display_service_envoy",
        "connect_timeout": "0.25s",
        "type": "EDS",
        "lb_policy": "ROUND_ROBIN",
        "eds_cluster_config": {
          "service_name": "basic_display_service_envoy",
          "eds_config": {
            "resource_api_version": "V3",
            "api_config_source": {
              "api_type": "REST",
              "transport_api_version": "V3",
              "cluster_names": ["eds_cluster"],
              "refresh_delay": "20s"
            }
          }
        }
      },
      {
        "name": "basic_display_service",
        "connect_timeout": "0.25s",
        "type": "static",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "basic_display_service",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8080
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "basic_display_db_envoy",
        "connect_timeout": "0.25s",
        "type": "EDS",
        "lb_policy": "ROUND_ROBIN",
        "eds_cluster_config": {
          "service_name": "basic_display_db_envoy",
          "eds_config": {
            "resource_api_version": "V3",
            "api_config_source": {
              "api_type": "REST",
              "transport_api_version": "V3",
              "cluster_names": ["eds_cluster"],
              "refresh_delay": "20s"
            }
          }
        }
      },
      {
        "name": "basic_display_db",
        "connect_timeout": "0.25s",
        "type": "static",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "basic_display_db",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 15432
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "web_frontend_service_envoy",
        "connect_timeout": "0.25s",
        "type": "EDS",
        "lb_policy": "ROUND_ROBIN",
        "eds_cluster_config": {
          "service_name": "web_frontend_service_envoy",
          "eds_config": {
            "resource_api_version": "V3",
            "api_config_source": {
              "api_type": "REST",
              "transport_api_version": "V3",
              "cluster_names": ["eds_cluster"],
              "refresh_delay": "20s"
            }
          }
        }
      },
      {
        "name": "web_frontend_service",
        "connect_timeout": "0.25s",
        "type": "static",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "web_frontend_service",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 3000
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  }
}
